# motion_manager

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  package.xml
.svn/: wc.db
Control/: hl_add.ctrl  hl_add_plan.ctrl  hl_add_plan_app.ctrl  hl_add_plan_app_acc.ctrl  hl_add_plan_app_ret_acc.ctrl  hl_add_plan_app_vel.ctrl  hl_add_plan_vel.ctrl  hl_timemap_plan_acc.tmap  hl_timemap_plan_app.tmap  hl_timemap_plan_app_acc.tmap  hl_timemap_plan_app_ret_acc.tmap  hl_timemap_plan_app_ret_acc_alpha.tmap  hl_timemap_plan_app_ret_acc_nat_obst_av.tmap  hl_timemap_plan_app_ret_acc_real_aros.tmap  hl_timemap_plan_app_ret_acc_real_aros_vision.tmap  hl_timemap_plan_app_vel.tmap  hl_timemap_plan_vel.tmap  jlim_av_sing_av.ctrl  jlim_av_sing_av_obst_av_pick.ctrl  jlim_av_sing_av_obsts_av_hl_add_plan_app_ret_acc.ctrl  jlim_av_sing_av_obsts_av_hl_add_plan_app_ret_acc_1.ctrl  jlim_av_sing_av_obsts_av_hl_add_plan_app_ret_acc_2.ctrl  jlim_av_sing_av_obsts_av_hl_add_plan_app_ret_acc_3.ctrl  jlim_av_sing_av_obsts_av_hl_add_plan_app_ret_acc_4.ctrl  jlim_av_sing_av_obsts_av_hl_add_plan_app_ret_acc_5.ctrl  jlim_av_sing_av_obsts_av_hl_add_plan_app_ret_acc_6.ctrl  jlim_av_sing_av_obsts_av_hl_add_plan_app_ret_acc_6_no_target_noise.ctrl  jlim_av_sing_av_obsts_av_hl_add_plan_app_ret_acc_6_no_target_noise_1.ctrl  jlim_av_sing_av_obsts_av_hl_add_plan_app_ret_acc_6_no_target_noise_2.ctrl  jlim_av_sing_av_obsts_av_hl_add_plan_app_ret_acc_6_no_target_noise_alpha.ctrl  jlim_av_sing_av_obsts_av_hl_add_plan_app_ret_acc_follow.ctrl  jlim_av_sing_av_obsts_av_hl_add_plan_app_ret_acc_nat_obst_av.ctrl  jlim_av_sing_av_obsts_av_hl_add_plan_app_ret_acc_nat_obst_av_real_aros.ctrl  jlim_av_sing_av_obsts_av_hl_add_plan_app_ret_acc_re_plan.ctrl  jlim_av_sing_av_obsts_av_hl_add_plan_app_ret_acc_real_aros.ctrl  jlim_av_sing_av_obsts_av_hl_add_plan_app_ret_acc_real_aros_vision.ctrl  jlim_av_sing_av_obsts_av_hl_add_plan_app_ret_acc_real_aros_vision_1.ctrl  jlim_av_sing_av_obsts_av_hl_add_plan_app_ret_acc_real_aros_vision_2.ctrl  normal_control.ctrl  obst_cylinder_av.ctrl  (+8 more)
Duals/: go_park_T2O3_small_warm.dual  grasp_bottleJuice_T2O4_tall_cold_start.dual  grasp_magentaColumn_cold.dual  test.dual  test_1.dual  transport_bottleJuice_T2O3_small_cold_1.dual  transport_bottleJuice_T2O3_small_cold_2.dual  transport_bottleJuice_T2O3_small_warm.dual
Duals/learning_tasks_1/: reaching_1_with_1_obst.dual
Duals/learning_tasks_picking_1/: picking_1_original.dual  picking_1_original_column_1.dual
Duals/learning_tasks_reaching_1/: reaching_1_with_1_obst_mod.dual  reaching_1_with_1_obst_original_1.dual  reaching_1_with_1_obst_original_5.dual  reaching_1_with_1_obst_original_prev.dual
Duals/learning_tasks_reaching_2/: reaching_2_with_many_obsts_original.dual
Duals/nat_obsts_av/: go_park_T2O3_small_cold.dual  grasp_bottleJuice_T2O3_small_cold.dual  grasp_bottleJuice_T2O3_small_warm.dual  grasp_bottleJuice_T2O4_tall_cold_start_1.dual  grasp_bottleJuice_T2O4_tall_warm_start_original_1.dual  transport_bottleJuice_T2O3_small_cold.dual  transport_bottleJuice_T2O3_small_warm_2.dual
Tasks/ARoS/: ARoS_insert_blueColumn_reach_eng.task  ARoS_insert_blueColumn_reach_eng_1.task  ARoS_insert_blueColumn_reach_eng_gohome.task  ARoS_insert_blueColumn_reach_eng_gohome_1.task  ARoS_insert_blueColumn_reach_eng_gohome_2.task  ARoS_insert_blueColumn_reach_new.task  HUML_ARoS_insert_blueColumn_reach_eng_new.task  HUML_ARoS_insert_blueColumn_reach_new.task  RRT_ARoS_reach_to_grasp_blueColumn_.task
Tasks/Jarde/: Jarde_insert_blueColumn_reach_eng.task  Jarde_insert_blueColumn_reach_eng_1.task  Jarde_insert_blueColumn_reach_eng_gohome.task
Tols/ARoS/: HUML_ARoS_engage_blueColumn_Right.tol  HUML_ARoS_grasp_blueColumn_Right_new_version.tol  HUML_ARoS_grasp_blueColumn_Right_new_version_retreat.tol  HUML_ARoS_place_blueColumn_Right_new_version_retreat.tol  RRT_ARoS_grasp_blueColumn_Right.tol
Tols/Jarde/: HUML_Jarde_gohome_blueColumn_Right.tol  HUML_Jarde_grasp_blueColumn_Right.tol
doxyconfig/: doxyfile.ini  rosdoc.yaml
include/MotionPlanner/: roscommdialog.hpp  toldialoghuml.hpp
include/motion_manager/: circular_vector_buffer.hpp  coeffs_dialog.hpp  common.hpp  comp_control_dialog.hpp  (+42 more)
launch/: aros_motion_manager.launch  motion_manager.desktop
resources/: images.qrc
scenarios/: ToyVehicleTask_aros.ttt
scripts/: hupl.py  motion_manager_vrep.sh  plot_hand_pos.py  predicting_task_1.py  predicting_task_1_old.py  predicting_task_1_var_1.py  predicting_task_1_var_2_old.py  training_task_1.py  training_task_1_old.py  training_task_1_var_1.py  training_task_1_var_2.py
src/: coeffs_dialog.cpp  comp_control_dialog.cpp  comp_tracking_control_dialog.cpp  comp_velocity_dialog.cpp  engagepoint.cpp  errors_control_dialog.cpp  hand_velocity_dialog.cpp  handposcolor.cpp  handposfunction.cpp  handposplot.cpp  humanoid.cpp  main.cpp  main_application.cpp  main_window.cpp  movement.cpp  nat_coll_av_dialog.cpp  object.cpp  point.cpp  pose.cpp  power_law_dialog.cpp  powerlaw3ddialog.cpp  prmdialog.cpp  prmstardialog.cpp  problem.cpp  qnode.cpp  results_control_joints_dialog.cpp  results_control_null_joints_dialog.cpp  results_control_pred_swivel_angle_dialog.cpp  results_plan_alpha_dialog.cpp  results_plan_joints_dialog.cpp  results_warm_start_dialog.cpp  roscommdialog.cpp  rrtconnectdialog.cpp  rrtdialog.cpp  rrtstardialog.cpp  rvizcommdialog.cpp  scenario.cpp  target.cpp  task.cpp  time_map_dialog.cpp  (+4 more)
ui/: coeffs_dialog.ui  comp_controldialog.ui  comp_tracking_controldialog.ui  comp_velocitydialog.ui  errors_controldialog.ui  hand_velocitydialog.ui  main_window.ui  main_window.ui.autosave  nat_coll_avdialog.ui  power_law_3ddialog.ui  power_lawdialog.ui  prmdialog.ui  prmstardialog.ui  results_control_joints_dialog.ui  results_control_null_joints_dialog.ui  results_control_pred_swivel_angle_dialog.ui  results_plan_alpha_dialog.ui  results_plan_joints_dialog.ui  results_warm_start_dialog.ui  rrtconnectdialog.ui  rrtdialog.ui  rrtstardialog.ui  rvizcommdialog.ui  time_map_dialog.ui  toldialoghuml.ui  toldialoghump.ui  toldialoghump_dual.ui  vrepcommdialog.ui
(+1132 files in other folders)
